@@ -67,14 +67,6 @@ tasks.withType(Checkstyle).configureEach {
     }
 }
 
-tasks.named("bootBuildImage") {
-    environment = [
-            "BP_JVM_VERSION"              : "19",
-            "BPE_DELIM_JAVA_TOOL_OPTIONS" : " ",
-            "BPE_APPEND_JAVA_TOOL_OPTIONS": "-XX:+UseZGC --enable-preview"
-    ]
-}
-
 java {
     withJavadocJar()
     withSourcesJar()
